Added /locations endpoint
